force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/Makro_Channel_All_Sales_Detail__c.object-meta.xml
<CustomObject>
    <label>Makro Channel All Sales Detail</label>
    <nameField>
        <displayFormat>MCA-{0000000}</displayFormat>
        <label>Makro Channel All Sales Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Makro Channel All Sales Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>