force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/article__c.field-meta.xml
<CustomField>
    <fullName>article__c</fullName>
    <description>客户型号编码</description>
    <inlineHelpText>客户型号编码</inlineHelpText>
    <label>article</label>
    <length>255</length>
    <type>Text</type>
</CustomField>