force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/article_name__c.field-meta.xml
<CustomField>
    <fullName>article_name__c</fullName>
    <description>客户型号描述</description>
    <inlineHelpText>客户型号描述</inlineHelpText>
    <label>article_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>