force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/group_name__c.field-meta.xml
<CustomField>
    <fullName>group_name__c</fullName>
    <label>group_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>