force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/ly_sales_var__c.field-meta.xml
<CustomField>
    <fullName>ly_sales_var__c</fullName>
    <label>ly_sales_var</label>
    <length>255</length>
    <type>Text</type>
</CustomField>