force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/site__c.field-meta.xml
<CustomField>
    <fullName>site__c</fullName>
    <description>客户门店名称</description>
    <inlineHelpText>客户门店名称</inlineHelpText>
    <label>site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>