force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/soh_cost__c.field-meta.xml
<CustomField>
    <fullName>soh_cost__c</fullName>
    <label>soh_cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>