force-app/main/default/objects/Makro_Channel_All_Sales_Detail__c/fields/soh_qty_bu__c.field-meta.xml
<CustomField>
    <fullName>soh_qty_bu__c</fullName>
    <description>库存</description>
    <inlineHelpText>库存</inlineHelpText>
    <label>soh_qty_bu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>